# qemu

./: .gitignore
gdb-xml/: rx-core.xml
hw/adc/: Kconfig  meson.build  renesas_ads1263.c  renesas_s12ad.c
hw/avr/: Kconfig  arduino.c  atmega.c  atmega.h
hw/char/: renesas_sci.c
hw/dma/: Kconfig  meson.build  renesas_rx_dmac.c  renesas_rx_dtc.c
hw/gpio/: Kconfig  meson.build  renesas_rx_gpio.c
hw/i2c/: Kconfig  avr_twi.c  meson.build
hw/intc/: rx_icu.c
hw/misc/: Kconfig  meson.build  renesas_rx_fcu.c  rx65n_sysclk.c
hw/net/: Kconfig  meson.build  renesas_etherc.c
hw/rtc/: Kconfig  meson.build  renesas_rx_rtc.c
hw/rx/: Kconfig  meson.build  rx65n-evk.c  rx65n.c  rx72m-rsk.c  rx72m.c
hw/ssi/: Kconfig  avr_spi.c  meson.build  renesas_rspi.c
hw/timer/: Kconfig  meson.build  renesas_mtu3.c
hw/watchdog/: Kconfig  meson.build  renesas_rx_wdt.c
include/hw/adc/: renesas_ads1263.h  renesas_s12ad.h
include/hw/char/: avr_usart.h  renesas_sci.h
include/hw/dma/: renesas_rx_dmac.h  renesas_rx_dtc.h
include/hw/gpio/: renesas_rx_gpio.h
include/hw/i2c/: avr_twi.h
include/hw/intc/: rx_icu.h
include/hw/misc/: renesas_rx_fcu.h  rx65n_sysclk.h
include/hw/net/: renesas_etherc.h
include/hw/rtc/: renesas_rx_rtc.h
include/hw/rx/: rx65n.h  rx72m.h
include/hw/ssi/: renesas_rspi.h
include/hw/timer/: renesas_mtu3.h
include/hw/watchdog/: renesas_rx_wdt.h
tests/functional/rx/: meson.build  test_rx65n.py
